# paw

./: .clang-format  .gitignore  AUTHORS.md  CMakeLists.txt  GRAMMER.ebnf  GRAMMER.md  LICENSE.md  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
fuzz/: CMakeLists.txt  afl.c  fuzz.c  fuzz.dict  fuzz.h  fuzz_expr.c  seed.paw  seed.sh  standalone.c
src/: .resolve.c.swo  alloc.c  alloc.h  api.c  api.h  array.c  array.h  asm.c  asm.h  ast.c  ast.h  aux.c  aux.h  auxlib.c  auxlib.h  bigint.c  bigint.h  call.c  call.h  check.c  check.h  code.c  code.h  codegen.c  collect.c  collect_items.c  compile.c  compile.h  config.h  debug.c  debug.h  decision.c  dominance.c  env.c  env.h  error.c  error.h  exhaustiveness.c  gc.c  gc.h  (+95 more)
src/codegen/: CMakeLists.txt  codegen.cc  codegen.h  paw.c
std/: io.paw  list.c  list.paw  map.c  map.paw  math.paw  ops.paw  option.paw  prelude.c  prelude.paw  result.paw
test/: .test_rt.c.swo  CMakeLists.txt  test.c  test.h  test_alloc.c  test_api.c  test_error.c  test_hir.c  test_impl.c  test_import.c  test_lex.c  test_limits.c  test_oom.c  test_rt.c  test_so.c
test/scripts/: alias.paw  argument_sequence.paw  array.paw  basic.paw  binary_trees.paw  block.paw  bubble.paw  builtin_trait.paw  capture_upvalue.paw  cast.paw  cfg.paw  chain.paw  class.paw  close_loop_variable.paw  closure.paw  code.paw  constants.paw  deferred_init.paw  destructure.paw  driver.paw  dump.paw  ebnf.paw  elementary_cellular_automata.paw  enum.paw  enum_impl.paw  error.paw  fib.paw  float.paw  function.paw  gen_compiler_bench.paw  global_const.paw  grammer.paw  import.paw  import_variant.paw  infer_assoc_items.paw  integer.paw  iterator.paw  kprop.paw  layout.paw  list.paw  (+50 more)
